--- a/src/styles.css
+++ b/src/styles.css
@@ -8,14 +8,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 }
 
-
-.fondoprincipal{
-  background-image: url("/src/assets/bg-form1920x1080.jpg");
-  
+/*
+html body{
+  background-image: url("../src/assets/bg-form1920x1080.jpg");
+        
   background-repeat:no-repeat;
-  background-position: center;
-  width:1920px;
-  height:1080px;
+  background-position: bottom;
   background-size: cover;
-  background-size: 100% 100%;
-}
+
+}*/
+
+
