--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -291,7 +291,7 @@
     <br>
 
     <p class="col-md-12 text-center" >
-      <button type="button" class="btn btn-primary"  id="boton1" data-bs-toggle="modal" (click)="showModal()" data-bs-target="#exampleModal" >
+      <button type="button" class="btn btn-primary"  id="boton1" data-bs-toggle="modal" (click)="continuar()" data-bs-target="#exampleModal" >
        Registrarse
       </button>
     </p>
